--- a/.gitignore
+++ b/.gitignore
@@ -159,3 +159,8 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 #.idea/
 TA.ipynb
+
+*.png
+Assignment02.ipynb
+Code.ipynb
+Usage1.ipynb
